# CWA-TakeOver

./: .gitignore  DIRECT_HIRE_FLOW.md  PRODUCTIZATION_PROPOSAL.md  README.md  TAKEOVER_STRATEGIC_AUDIT.md  TESTING.md  _axon_driver.ts  _publish.ts  bun.lockb  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  webhook-server.js  webhook-server.ts
.github/workflows/: observatory-audit.yml  release.yml
data/: github-webhooks.json
docs/: AXON_ARCHITECTURE.md  AXON_BACKLOG.md  AXON_COMMANDS.md  AXON_PERSONALITY_P6_ARCHITECTURE.md  AXON_PROGRESS.md  AXON_SHELL_SETUP.md  CHAT_AUDIT.md  CODE_MODULE.md  COMPONENTIZER_AND_CLI.md  EMAIL_INTEGRATION_ARCHITECTURE.md  EMAIL_SEND_SETUP.md  EMPLOYEE_TRAINING_PLAN.md  HIRING_SYSTEM.md  INFRASTRUCTURE_OVERVIEW.md  INVOICER_CHAT_NOTIFICATIONS_QUOTAS.md  OFFER_REMINDERS.md  REGISTRY_ARCHITECTURE.md  SALES_CRM_ARCHITECTURE.md  SIMPLICITY_CLI.md  SLACK_PROXY_SPEC.md  TRANSCRIPTION_SIDECAR.md  axon-week2-commit.txt
migrations/: add_company_column.sql  chat_schema_baseline.sql  chat_webhooks.sql  simplicity_admin_read_policies.sql
pitch/: 15-saas-replaced.md  demo-runbook.md  pitch-script.md
scripts/: README.md  import-from-componentizer.ts  migrate-registry.ts  observatory-audit.mjs
src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: github_webhooks.rs  lib.rs  main.rs
src/Axon/: AxonProvider.tsx  AxonRoot.tsx  axon.css  config.ts  index.ts  types.ts
src/Bookkeeping/: PLAN.md  README.md
src/Fundraise/: checkBounces.ts  discoverInvestors.ts  discoverPartnerEmail.ts  draftInvestorEmail.ts  findPartnerEmail.ts  useEmailOpens.ts  useOutreachHealth.ts  useOutreachStats.ts  useRecentSends.ts  useSuccessStats.ts
src/JobHunt/: atsDetect.ts  autoApply.ts  autopilot.ts  discoverJobs.ts  draftRecruiterEmail.ts  draftWarmOutreach.ts  fetchJobsApi.ts  findHiringContacts.ts  findRecruiterEmail.ts  profile.ts  resumePdf.tsx  tailorResume.ts
src/MyComponents/: BillingPage.tsx  CourseDrawer.tsx  Funding.queries.ts  FundingCalculator.tsx  FundingPage.tsx  GraduationPlan.queries.ts  GraduationPlan.tsx  ImgToIcon.tsx  NewSchedule.tsx  OrionAnimation.tsx  ResourceStation.tsx  ScenarioViews.tsx  SettingsPage.tsx  WeeklyQuota.tsx  account-management.tsx  app-sidebar.tsx  botApi.ts  chatInput.tsx  displayEmployees.tsx  displayInterns.tsx  editForm.tsx  fundingCalculatorMath.ts  fundingMath.ts  generateContractId.tsx  graduationCourseData.ts  graduationScenarios.ts  graphy.tsx  invoice.tsx  login.tsx  multiselectField.tsx  personalLifeManager.tsx  pinPage.tsx  signup.tsx  storage.tsx  supabase.ts  uploadAvatar.tsx  welcome.tsx
src/assets/: bot.css  broadcast.css  details.css  employee.css  index.css  main.css  root.css  sidebar.css
src/components/: CommandPalette.tsx  UserDropdown.tsx  WeeklyQuota.tsx  app-sidebar.tsx  displayEmployees.tsx  displayInterns.tsx  login.tsx  pinPage.tsx  signup.tsx  supabase.ts  welcome.tsx
src/diagnostics/: captureBuffer.ts
src/lib/: airtable.ts  calcom.ts  chatNotify.test.ts  chatNotify.ts  github.ts  linear.ts  notion.ts  slack.ts  stripe.ts  useStripeDashboard.ts  vercel.ts
src/routes/: WeeklyQuotas.lazy.tsx  __root.tsx  about.lazy.tsx  admin.observatory.lazy.tsx  analytics.lazy.tsx  arabic.lazy.tsx  axonMemory.lazy.tsx  axonSwarm.lazy.tsx  billing.lazy.tsx  bio.lazy.tsx  bookkeeping.lazy.tsx  bot.lazy.tsx  broadcast.lazy.tsx  budgetary.lazy.tsx  capitalPlan.lazy.tsx  chat.lazy.tsx  code.lazy.tsx  coldEmail.lazy.tsx  components.lazy.tsx  contractGenerator.lazy.tsx  detailFolders.lazy.tsx  details.lazy.tsx  employee.lazy.tsx  financialDashboard.lazy.tsx  funding.lazy.tsx  fundraise.lazy.tsx  graduationPlan.lazy.tsx  growth.lazy.tsx  hiring.lazy.tsx  inbox.lazy.tsx  index.lazy.tsx  infrastructure.lazy.tsx  invoiceClients.lazy.tsx  invoicePreview.lazy.tsx  invoicer.lazy.tsx  jobs.lazy.tsx  linear.lazy.tsx  middle.lazy.tsx  mod_logs.lazy.tsx  offer.accept.$token.lazy.tsx  (+29 more)
src/stores/: FinancialConstants.ts  FinancialField.ts  FinancialUtils.ts  MeetingStore.ts  chatStore.ts  connectors.ts  crm.ts  demoMode.ts  fundraiseSettings.ts  gmail.ts  huddleStore.ts  investors.ts  invoiceQuery.ts  invoiceStore.ts  liveHuddlesStore.ts  main.ts  onboarding.ts  personalScheduleTypes.ts  projects.ts  query.ts  rehydrateCompanyBinding.ts  roadmapQuery.ts  roadmapStore.ts  scheduleTypes.ts  shiftPatterns.ts  shiftTypes.ts  shifts.ts  store.ts  stronghold.ts  workspace.ts  (+5 more)
tests/: setup.ts
(+675 files in other folders)
