[package]
name = "cwa-takeover"
version = "0.4.0"
description = "The CWA TakeOver App is used to Manage the CodeWithAli Company with ease"
authors = ["Hanif Palm", "Ali Alibrahimi"]
edition = "2021"

[lib]
name = "cwa_takeover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["postgres"] }
postgres-openssl = "0.5.1"
openssl = "0.10.70"
openssl-sys = "0.9.105"
dotenv = "0.15.0"
postgres = "0.19.10"
aes-gcm = "0.10.3"
hex = "0.4.3"
resend-rs = "0.11.2"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

[target.x86_64-pc-windows-msvc]
rustflags = [
    "-Ctarget-feature=+crt-static",
    "-Lnative=C:\\Program Files\\OpenSSL-Win64\\lib"
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
