[package]
name = "cwa-takeover"
version = "1.8.2"
description = "The CWA TakeOver App is used to Manage the CodeWithAli Company with precision."
authors = ["Hanif Palm", "Ali Alibrahimi"]
edition = "2024"

[lib]
name = "cwa_takeover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
chrono = "0.4"
crypto = "0.4"
hmac = "0.12.0"
sha1 = "0.10.0"

tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["postgres"] }
postgres-openssl = "0.5.1"
openssl = "0.10.78"
openssl-sys = "0.9.114"
dotenv = "0.15.0"
postgres = "0.19.10"
aes-gcm = "0.10.3"
hex = "0.4.3"
resend-rs = "0.25.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-stronghold = "2"
rust-argon2 = "3.0.0"

# ── Windows-only deps ───────────────────────────────────────────────
# `windows` crate gives us SetCurrentProcessExplicitAppUserModelID,
# which we call once at startup so Windows treats the running exe as
# a registered notification source — even in `tauri dev`. Without
# this, dev-build OS toasts dispatch silently because the dev binary
# path isn't in the Windows shell's app registry.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Enabled by CI only. Builds OpenSSL from source via the `vendored` feature
# so the GitHub runner doesn't need a system OpenSSL install. Locally we
# use the system OpenSSL the user already has (`tauri dev` / `tauri build`
# without --features), so devs don't need Perl + a from-scratch OpenSSL
# build every time.
ci-vendored-openssl = ["openssl/vendored"]
